trying to fix background image on mobile -- maybe

--- a/style.css
+++ b/style.css
@@ -179,7 +179,6 @@ a:hover {
   background-image: url(images/terrazzo@2x.jpg);
   background-size: 100% auto;
   background-attachment: fixed;
-  background-size: cover;
   max-width: 100%;
   height: 550px;
 }
